[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/IntroScroll.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/smoke_shader.shader" type="Shader" id=2]
[ext_resource path="res://assets/audio/music/intro_scroll.ogg" type="AudioStream" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/time_scale = 0.2
shader_param/smoke_density = 0.85
shader_param/drift_speed = 0.35
shader_param/smoke_color = Vector3( 0.5, 0.5, 0.55 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/EB_Garamond/static/EBGaramond-SemiBold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 2 )

[node name="IntroScroll" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlackBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="SmokeBackground" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollText" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -800.0
custom_colors/default_color = Color( 0.85, 0.8, 0.7, 1 )
custom_constants/line_separation = 35
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Before names were given, before gods learned to listen,
the world was shaped by hands that remembered.

From salt and clay, life was formed — not to rule, but to endure.

From the waters of Yām ha-Melaḥ, the Sea of Salt,
the land learned to harden, and to break.

The seas rose, and withdrew. Cities were raised, and swallowed.

The old watchers turned their faces away.

What was made to remember began to forget.
And in that forgetting, something else awoke.

You rise where the Sea of Salt meets the broken earth.
Your name is gone. Your purpose unspoken.

The stones do not answer you. The gods do not claim you.

Yet the clay still knows your shape. And the brine still calls you whole.

Walk, while memory yet resists the dark.
Walk, and hold back what would extinguish the light.[/center]"
text = "Before names were given, before gods learned to listen,
the world was shaped by hands that remembered.

From salt and clay, life was formed — not to rule, but to endure.

From the waters of Yām ha-Melaḥ, the Sea of Salt,
the land learned to harden, and to break.

The seas rose, and withdrew. Cities were raised, and swallowed.

The old watchers turned their faces away.

What was made to remember began to forget.
And in that forgetting, something else awoke.

You rise where the Sea of Salt meets the broken earth.
Your name is gone. Your purpose unspoken.

The stones do not answer you. The gods do not claim you.

Yet the clay still knows your shape. And the brine still calls you whole.

Walk, while memory yet resists the dark.
Walk, and hold back what would extinguish the light."
fit_content_height = true
scroll_active = false

[node name="FadeOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SkipLabel" type="Label" parent="."]
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "Press SPACE to skip"
align = 1
valign = 1

[connection signal="finished" from="AudioPlayer" to="." method="_on_AudioPlayer_finished"]
